работает тест. осталось пофиксить кучу потоков для серверов