@@ -18,6 +18,7 @@
 
 package org.complexityanalyzer.geoscan.scan;
 
+import it.unimi.dsi.fastutil.objects.*;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
@@ -32,13 +33,12 @@ import org.complexityanalyzer.geoscan.config.ScanConfig;
 import org.complexityanalyzer.geoscan.data.ChunkSnapshot;
 import org.complexityanalyzer.geoscan.task.*;
 
-import java.util.*;
+import java.util.ArrayDeque;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.locks.LockSupport;
-import java.util.stream.Collectors;
 
 public class ScanExecutor {
 
@@ -59,7 +59,7 @@ public class ScanExecutor {
     private final Object sessionLock = new Object();
     private final AtomicBoolean completing = new AtomicBoolean(false);
 
-    private final Set<Thread> workerThreads = ConcurrentHashMap.newKeySet();
+    private final ObjectSet<Thread> workerThreads = ObjectSets.synchronize(new ObjectOpenHashSet<>());
     private final int maxWorkers;
 
     private final ConcurrentHashMap<ScanSession.BiomeKey, BufferedSnapshots> resultBuffers = new ConcurrentHashMap<>();
@@ -70,18 +70,18 @@ public class ScanExecutor {
     private static final class BufferedSnapshots {
         private final ArrayDeque<ChunkSnapshot> queue = new ArrayDeque<>(ScanConfig.BATCH_SAVE_THRESHOLD * 2);
 
-        synchronized List<ChunkSnapshot> addAndDrainIfNeeded(ChunkSnapshot snapshot) {
+        synchronized ObjectList<ChunkSnapshot> addAndDrainIfNeeded(ChunkSnapshot snapshot) {
             queue.addLast(snapshot);
-            if (queue.size() < ScanConfig.BATCH_SAVE_THRESHOLD) return Collections.emptyList();
-            List<ChunkSnapshot> batch = new ArrayList<>(ScanConfig.BATCH_SAVE_THRESHOLD);
+            if (queue.size() < ScanConfig.BATCH_SAVE_THRESHOLD) return ObjectLists.emptyList();
+            ObjectArrayList<ChunkSnapshot> batch = new ObjectArrayList<>(ScanConfig.BATCH_SAVE_THRESHOLD);
             while (batch.size() < ScanConfig.BATCH_SAVE_THRESHOLD && !queue.isEmpty()) batch.add(queue.removeFirst());
             return batch;
         }
 
-        synchronized List<ChunkSnapshot> drainAll() {
-            if (queue.isEmpty()) return Collections.emptyList();
-            List<ChunkSnapshot> remaining = new ArrayList<>(queue);
-            queue.clear();
+        synchronized ObjectList<ChunkSnapshot> drainAll() {
+            if (queue.isEmpty()) return ObjectLists.emptyList();
+            ObjectArrayList<ChunkSnapshot> remaining = new ObjectArrayList<>(queue.size());
+            while (!queue.isEmpty()) remaining.add(queue.removeFirst());
             return remaining;
         }
     }
@@ -119,15 +119,11 @@ public class ScanExecutor {
 
         synchronized (sessionLock) {
             if (currentSession != null) currentSession.invalidate();
-            for (Thread worker : workerThreads) {
-                LockSupport.unpark(worker);
-            }
+            for (Thread worker : workerThreads) LockSupport.unpark(worker);
         }
 
         long waitStart = System.currentTimeMillis();
-        while (activeWorkerCount.get() > 0 && (System.currentTimeMillis() - waitStart) < 2000) {
-            Thread.onSpinWait();
-        }
+        while (activeWorkerCount.get() > 0 && (System.currentTimeMillis() - waitStart) < 2000) Thread.onSpinWait();
 
         if (activeWorkerCount.get() > 0) {
             ComplexityAnalyzer.LOGGER.warn("[SCAN] {} old workers still running after 2s wait", activeWorkerCount.get());
@@ -163,9 +159,7 @@ public class ScanExecutor {
             notifier.logInfo("[SCAN] 🚀 " + newSession.getProfile().name() +
                     " MODE — " + targetWorkers + " workers" + msptInfo);
 
-            for (int i = 0; i < targetWorkers; i++) {
-                startWorker();
-            }
+            for (int i = 0; i < targetWorkers; i++) startWorker();
         }
     }
 
@@ -239,13 +233,12 @@ public class ScanExecutor {
                     break;
                 }
 
-                List<ResourceLocation> dims = session.getDimensionsWithNeeds();
-                if (dims.isEmpty()) {
+                ResourceLocation dimId = session.getRandomDimensionWithNeeds();
+                if (dimId == null) {
                     tryComplete(session);
                     break;
                 }
 
-                ResourceLocation dimId = dims.get(ThreadLocalRandom.current().nextInt(dims.size()));
                 ResourceKey<Level> dimension = ResourceKey.create(Registries.DIMENSION, dimId);
 
                 ResourceLocation biomeId = session.getRandomNeededBiome(dimId);
@@ -256,9 +249,7 @@ public class ScanExecutor {
                 scanArea(workerName, mySession, dimension, biomeKey);
             }
         } catch (Exception e) {
-            if (!isShutdown.get()) {
-                ComplexityAnalyzer.LOGGER.error("[SCAN] {} crashed", workerName, e);
-            }
+            if (!isShutdown.get()) ComplexityAnalyzer.LOGGER.error("[SCAN] {} crashed", workerName, e);
         } finally {
             workerThreads.remove(Thread.currentThread());
             activeWorkerCount.decrementAndGet();
@@ -273,11 +264,10 @@ public class ScanExecutor {
         long pauseStart = System.currentTimeMillis();
         int pauseCount = throttlePauseCount.incrementAndGet();
 
-        if (pauseCount <= activeWorkerCount.get()) {
-            ComplexityAnalyzer.LOGGER.debug("[SCAN] {} paused — MSPT {} > {}", workerName,
-                    String.format("%.1f", monitor.getCurrentMspt()),
-                    String.format("%.1f", monitor.getMsptLimit()));
-        }
+        if (pauseCount <= activeWorkerCount.get()) ComplexityAnalyzer.LOGGER.debug(
+                "[SCAN] {} paused — MSPT {} > {}", workerName,
+                String.format("%.1f", monitor.getCurrentMspt()), String.format("%.1f", monitor.getMsptLimit()));
+
 
         while (monitor.isThrottled() && !isShutdown.get()) {
             ScanSession current = currentSession;
@@ -307,12 +297,12 @@ public class ScanExecutor {
         if (mySession.doesNotNeedBiome(dimId, biomeId)) return;
         if (waitAndCheckStop(workerName, mySession)) return;
 
-        Optional<ChunkPos> startPos = worldScanner.findBiomeLocation(dimension, biomeKey, false);
+        ChunkPos startPos = worldScanner.findBiomeLocation(dimension, biomeKey, false);
 
-        if (startPos.isEmpty() || shouldStop(mySession)) return;
+        if (startPos == null || shouldStop(mySession)) return;
 
         ScanContext ctx = new ScanContext(workerName, mySession, dimension, biomeKey, dimId, biomeId);
-        ctx.searcher.startAt(startPos.get().x, startPos.get().z);
+        ctx.searcher.startAt(startPos.x, startPos.z);
 
         performScan(ctx);
         logResults(ctx);
@@ -335,7 +325,7 @@ public class ScanExecutor {
         final ResourceLocation dimId;
         final ResourceLocation biomeId;
         final SpiralChunkSearcher searcher = new SpiralChunkSearcher();
-        final Map<ResourceLocation, Integer> foundByBiome = new HashMap<>();
+        final Object2IntOpenHashMap<ResourceLocation> foundByBiome = new Object2IntOpenHashMap<>();
         final int maxScannedBudget;
         final int emptyBatchTolerance;
         final int stagnantBatchTolerance;
@@ -374,7 +364,7 @@ public class ScanExecutor {
         while (ctx.canContinue()) {
             if (waitAndCheckStop(ctx.workerName, ctx.mySession)) break;
             if (!ctx.needsBiome()) break;
-            List<ChunkPos> batch = collectBatch(ctx);
+            ObjectArrayList<ChunkPos> batch = collectBatch(ctx);
             if (batch.isEmpty()) {
                 if (handleEmptyBatch(ctx)) break;
                 continue;
@@ -390,9 +380,9 @@ public class ScanExecutor {
         }
     }
 
-    private List<ChunkPos> collectBatch(ScanContext ctx) {
+    private ObjectArrayList<ChunkPos> collectBatch(ScanContext ctx) {
         int batchSize = calculateBatchSize(ctx.mySession);
-        List<ChunkPos> batch = new ArrayList<>(batchSize);
+        ObjectArrayList<ChunkPos> batch = new ObjectArrayList<>(batchSize);
         for (int i = 0; i < batchSize && ctx.scanned < ctx.maxScannedBudget; i++) {
             ChunkPos pos = ctx.searcher.next();
             ctx.scanned++;
@@ -417,15 +407,15 @@ public class ScanExecutor {
         if (waitAndCheckStop(ctx.workerName, ctx.mySession)) return true;
         if (shouldStop(ctx.mySession)) return true;
         boolean allowCachedLocation = !forceFreshSearch && (ctx.relocations % 3 != 2);
-        Optional<ChunkPos> newPos = worldScanner.findBiomeLocation(
+        ChunkPos newPos = worldScanner.findBiomeLocation(
                 ctx.dimension,
                 ctx.biomeKey,
                 true,
                 allowCachedLocation
         );
-        if (newPos.isEmpty() || shouldStop(ctx.mySession)) return true;
+        if (newPos == null || shouldStop(ctx.mySession)) return true;
 
-        ctx.searcher.startAt(newPos.get().x, newPos.get().z);
+        ctx.searcher.startAt(newPos.x, newPos.z);
         ctx.emptyBatches = 0;
         ctx.stagnantBatches = 0;
         ctx.scanned = 0;
@@ -433,8 +423,8 @@ public class ScanExecutor {
         return false;
     }
 
-    private int processBatchResults(ScanContext ctx, List<ChunkPos> batch) {
-        List<ChunkBatchProcessor.ScanResult> results = batchProcessor.processBatch(ctx.dimension, batch, ctx.mySession);
+    private int processBatchResults(ScanContext ctx, ObjectArrayList<ChunkPos> batch) {
+        ObjectList<ChunkBatchProcessor.ScanResult> results = batchProcessor.processBatch(ctx.dimension, batch, ctx.mySession);
         int claimed = 0;
         for (ChunkBatchProcessor.ScanResult result : results) {
             if (shouldStop(ctx.mySession)) break;
@@ -453,7 +443,7 @@ public class ScanExecutor {
             saveToBuffer(ctx.dimId, biome, snapshot);
             ctx.mySession.recordChunkScanned();
             ctx.found++;
-            ctx.foundByBiome.merge(biome, 1, Integer::sum);
+            ctx.foundByBiome.addTo(biome, 1);
             return true;
         }
         return false;
@@ -461,20 +451,22 @@ public class ScanExecutor {
 
     private void logResults(ScanContext ctx) {
         if (ctx.found == 0) return;
-        String biomeStats = ctx.foundByBiome.entrySet().stream()
-                .map(e -> e.getKey().getPath() + ":" + e.getValue())
-                .collect(Collectors.joining(", "));
+        StringBuilder sb = new StringBuilder();
+        for (var entry : Object2IntMaps.fastIterable(ctx.foundByBiome)) {
+            if (!sb.isEmpty()) sb.append(", ");
+            sb.append(entry.getKey().getPath()).append(':').append(entry.getIntValue());
+        }
 
         ComplexityAnalyzer.LOGGER.info("[SCAN] {} scanned around {}: {} chunks ({})",
-                ctx.workerName, ctx.biomeId.getPath(), ctx.found, biomeStats);
+                ctx.workerName, ctx.biomeId.getPath(), ctx.found, sb);
     }
 
     private int calculateMaxScannedBudget(ScanSession session) {
         int chunksPerBiome = Math.max(1, session.getChunksPerBiome());
         return switch (session.getProfile()) {
-            case FULL -> Math.max(2048, Math.min(chunksPerBiome * 2, 4096));
-            case MOST -> Math.max(1024, Math.min(chunksPerBiome * 2, 2048));
-            case HALF -> Math.max(512, Math.min(chunksPerBiome * 2, 1024));
+            case FULL -> Math.clamp(chunksPerBiome * 2L, 2048, 4096);
+            case MOST -> Math.clamp(chunksPerBiome * 2L, 1024, 2048);
+            case HALF -> Math.clamp(chunksPerBiome * 2L, 512, 1024);
             case QUARTER -> 256;
         };
     }
@@ -497,14 +489,13 @@ public class ScanExecutor {
 
     private int calculateBatchSize(ScanSession session) {
         MsptMonitor monitor = msptMonitor;
-        if (monitor == null || !monitor.hasLimit()) {
-            return switch (session.getProfile()) {
-                case FULL -> 256;
-                case MOST -> 192;
-                case HALF -> 128;
-                case QUARTER -> 64;
-            };
-        }
+        if (monitor == null || !monitor.hasLimit()) return switch (session.getProfile()) {
+            case FULL -> 256;
+            case MOST -> 192;
+            case HALF -> 128;
+            case QUARTER -> 64;
+        };
+
         float currentMspt = monitor.getCurrentMspt();
         float limit = monitor.getMsptLimit();
 
@@ -557,13 +548,13 @@ public class ScanExecutor {
     private void saveToBuffer(ResourceLocation dim, ResourceLocation biome, ChunkSnapshot snapshot) {
         ScanSession.BiomeKey key = new ScanSession.BiomeKey(dim, biome);
         BufferedSnapshots buffer = resultBuffers.computeIfAbsent(key, k -> new BufferedSnapshots());
-        List<ChunkSnapshot> batch = buffer.addAndDrainIfNeeded(snapshot);
+        ObjectList<ChunkSnapshot> batch = buffer.addAndDrainIfNeeded(snapshot);
         if (!batch.isEmpty()) database.appendReconData(key.dim(), key.biome(), batch);
     }
 
     private void flushAllBuffers() {
         resultBuffers.forEach((key, buffer) -> {
-            List<ChunkSnapshot> remaining = buffer.drainAll();
+            ObjectList<ChunkSnapshot> remaining = buffer.drainAll();
             if (!remaining.isEmpty()) database.appendReconData(key.dim(), key.biome(), remaining);
         });
     }
